--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "code",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/Huuvandev98/cinema-movie/",
+  "homepage": "https://huuvandev98.github.io/cinema-movie/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
     "query-string": "^7.0.1",
+    "gh-pages": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
@@ -42,8 +43,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^4.0.0"
   }
 }
